rust/herb-highlighter/tests/snapshots/html_sink_test__renders_a_file_fragment_with_line_numbers.snap
---
source: herb-highlighter/tests/html_sink_test.rs
expression: "highlighter().highlight_html(PATH, content, &HTMLRenderOptions::default())"
---
<figure class="herb-highlight" data-herb-theme="onedark">
<figcaption class="herb-file-header">app/views/users/show.html.erb</figcaption>
<pre class="herb-code"><code><span class="herb-line" data-line="1"><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line" data-line="2"><span class="herb-token-whitespace">  </span><span class="herb-token-html-comment-start">&lt;!--</span><span class="herb-comment"> </span><span class="herb-comment">first</span><span class="herb-comment"> </span><span class="herb-comment">comment</span><span class="herb-comment"> </span><span class="herb-comment">line</span></span>
<span class="herb-line" data-line="3"><span class="herb-comment">  </span><span class="herb-comment">second</span><span class="herb-comment"> </span><span class="herb-comment">comment</span><span class="herb-comment"> </span><span class="herb-comment">line</span><span class="herb-comment"> </span><span class="herb-token-html-comment-end">--&gt;</span></span>
<span class="herb-line" data-line="4"><span class="herb-token-whitespace">  </span><span class="herb-token-html-tag-start">&lt;</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span><span class="herb-token-identifier">ok</span><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">span</span><span class="herb-token-html-tag-end">&gt;</span></span>
<span class="herb-line" data-line="5"><span class="herb-token-html-tag-start-close">&lt;/</span><span class="herb-tag-name">div</span><span class="herb-token-html-tag-end">&gt;</span></span></code></pre>
</figure>
